Bug 360980 - Dolphin uses an action icon instead of an emblem for read-only folders and files.
Summary: Dolphin uses an action icon instead of an emblem for read-only folders and fi...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.47.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: David Faure
URL: http://i.imgur.com/UJC0MGN.png
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-25 20:43 UTC by Uri Herrera
Modified: 2018-06-27 13:01 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.48
Sentry Crash Report:
uri_herrera: Usability+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Uri Herrera 2016-03-25 20:43:13 UTC
Dolphin is using an action icon instead of an emblem icon for read-only files and folders. This behavior is not consistent as other emblems are used correctly like symbolic links.  This is not noticeable with Breeze or Oxygen but it is noticeable with themes that use different styles for these icons.

Reproducible: Always

Steps to Reproduce:
1. Change to an icon theme with mono action icons and color emblems
2. Open Dolphin
3. View read-only folder or file

Actual Results:  
Dolphin uses an action icon.

Expected Results:  
Dolphin should use an emblem.

it is possible that Dolphin is using lock or object-locked when it should be using emblem-nowrite, emblem-readonly, emblem-locked or emblem-encrypted-locked.
Comment 1 andreas 2016-03-25 21:31:54 UTC
+1
Comment 2 Julian Steinmann 2018-06-15 19:08:32 UTC
Is this issue still present with a newer version of Dolphin? If yes, which icon theme do you currently use (to allow us to reproduce this issue as easily as possible)? Thanks!
Comment 3 Nate Graham 2018-06-19 05:19:43 UTC
The issue is still reproducible, and it's in KIO, not Dolphin. Uri was right: it's using `object-locked`. Here's a patch: https://phabricator.kde.org/D13597
Comment 4 Nate Graham 2018-06-27 13:01:57 UTC
Git commit 0726f17ae791f538e6bea2db7cbdc4a28ba0af04 by Nathaniel Graham.
Committed on 27/06/2018 at 13:01.
Pushed by ngraham into branch 'master'.

Use a correct emblem icon for readonly files and folders

Summary:
FIXED-IN: 5.48

Test Plan: Browsed some read-only files and folders with Dolphin. No visual change with Breeze or Oxygen icons. Didn't test other themes, but according to the bug report, this should fix an issue for them.

Reviewers: #dolphin, #frameworks, broulik

Reviewed By: broulik

Subscribers: broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D13597

M  +1    -1    src/core/kfileitem.cpp

https://commits.kde.org/kio/0726f17ae791f538e6bea2db7cbdc4a28ba0af04