Use a correct emblem icon for readonly files and folders

Summary:
BUG: 360980
FIXED-IN: 5.48

Test Plan: Browsed some read-only files and folders with Dolphin. No visual change with Breeze or Oxygen icons. Didn't test other themes, but according to the bug report, this should fix an issue for them.

Reviewers: #dolphin, #frameworks, broulik

Reviewed By: broulik

Subscribers: broulik, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D13597